# SerialReader

./: CMakeLists.txt  SerialReader.sln  SerialReader.vcxproj  SerialReader.vcxproj.filters
include/: SerialC.h  SerialReader.hpp
src/: SerialC.cpp
